crates/shipper/src/ops/git/snapshots/shipper__ops__git__context__edge_case_snapshots__context_all_fields.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
GitContext {
    commit: Some(
        "aabbccddee1122334455aabbccddee1122334455",
    ),
    branch: Some(
        "release/v2.0",
    ),
    tag: Some(
        "v2.0.0-rc.1",
    ),
    dirty: Some(
        false,
    ),
}
