crates/shipper/src/ops/git/snapshots/shipper__ops__git__context__edge_case_snapshots__context_detached_head.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
GitContext {
    commit: Some(
        "abc1234567890abc1234567890abc1234567890ab",
    ),
    branch: None,
    tag: None,
    dirty: Some(
        false,
    ),
}
