crates/shipper/src/ops/git/snapshots/shipper__ops__git__context__edge_case_snapshots__context_dirty_with_tag.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
GitContext {
    commit: Some(
        "5555555555555555555555555555555555555555",
    ),
    branch: Some(
        "main",
    ),
    tag: Some(
        "v0.1.0",
    ),
    dirty: Some(
        true,
    ),
}
