crates/shipper/src/ops/git/snapshots/shipper__ops__git__context__edge_case_snapshots__is_dirty_all_variants.snap
---
source: crates/shipper-git/src/lib.rs
expression: variants
---
[
    DirtyVariant {
        input: None,
        result: true,
    },
    DirtyVariant {
        input: Some(
            true,
        ),
        result: true,
    },
    DirtyVariant {
        input: Some(
            false,
        ),
        result: false,
    },
]
